# docufinder

./: .gitignore  BUILD_GUIDE.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  PERFORMANCE_ANALYSIS.md  PLAN.md  README.md  RELEASE_NOTES_v2.3.10.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  창의제안서_DocuFinder.md
.github/workflows/: ci.yml  publish.yml
.tauri/: docufinder.key  docufinder.key.pub
docs/: MAC_PORT_PLAN.md
docs/session-notes/: 2026-04-17-hwpx-drm-popup-fix.md
promo-video/: package.json  tsconfig.json
promo-video/src/: IntroVideo.tsx  Prologue.tsx  Root.tsx  index.ts
public/: theme-init.js
scripts/: bump-version.ps1  bundle-kordoc.ps1  convert-kosimcse.py  create-cert.ps1  docufinder-codesign.cer  download-model.ps1  quantize-kosimcse.py  setup-macos-resources.sh  setup-webview2-runtime.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows-ltsc.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: breadcrumb.rs  constants.rs  error.rs  lib.rs  main.rs  model_downloader.rs  panic_filter.rs  webview2_runtime.rs
src-tauri/src/ai/: gemini_client.rs  mod.rs  types.rs
src-tauri/src/application/: container.rs  mod.rs
src-tauri/src/application/dto/: indexing.rs  mod.rs  search.rs
src-tauri/src/application/errors/: mod.rs
src-tauri/src/application/services/: folder_service.rs  index_service.rs  mod.rs  rag_service.rs  search_service.rs
src-tauri/src/application/services/search_service/: helpers.rs  hybrid.rs  keyword.rs  mod.rs  semantic.rs  smart.rs
src-tauri/src/commands/: ai.rs  duplicate.rs  expiry.rs  export.rs  file.rs  index.rs  lineage.rs  maintenance.rs  mod.rs  preview.rs  search.rs  settings.rs  tags.rs  telemetry.rs  typo.rs
src-tauri/src/commands/index/: batch.rs  data.rs  folder.rs  init.rs  mod.rs
src-tauri/src/db/: migration.rs  mod.rs  pool.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/entities/: chunk.rs  file.rs  folder.rs  mod.rs
src-tauri/src/domain/errors/: domain_error.rs  mod.rs
src-tauri/src/domain/repositories/: chunk_repository.rs  embedder_port.rs  file_repository.rs  mod.rs  vector_repository.rs
src-tauri/src/domain/value_objects/: chunk_id.rs  embedding.rs  file_id.rs  mod.rs
src-tauri/src/embedder/: mod.rs
src-tauri/src/indexer/: background_parser.rs  collector.rs  exclusions.rs  gitignore_matcher.rs  lineage.rs  manager.rs  mod.rs  pipeline.rs  sync.rs  vector_worker.rs  watcher.rs  worker.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/embedding/: mod.rs
src-tauri/src/infrastructure/persistence/: chunk_repository.rs  file_repository.rs  mod.rs
src-tauri/src/infrastructure/vector/: mod.rs
src-tauri/src/llm/: gemini.rs  mod.rs  openai.rs
src-tauri/src/ocr/: detection.rs  geometry.rs  mod.rs  recognition.rs
src-tauri/src/parsers/: docx.rs  hwpx.rs  image_ocr.rs  kordoc.rs  mod.rs  password_detect.rs  pdf.rs  pdf_sniff.rs  pptx.rs  txt.rs  xlsx.rs
src-tauri/src/parsers/hwpx/: layout.rs  mod.rs  models.rs  text_extraction.rs  xml_parsing.rs
src-tauri/src/reranker/: mod.rs
src-tauri/src/search/: filename.rs  filename_cache.rs  fts.rs  hybrid.rs  mod.rs  nl_query.rs  sentence.rs  vector.rs
src-tauri/src/tokenizer/: lindera_ko.rs  mod.rs
src-tauri/src/utils/: cloud_detect.rs  disk_info.rs  filename_normalize.rs  folder_scope.rs  idle_detector.rs  mod.rs  network_path.rs
src-tauri/tests/: parser_tests.rs  xls_neis_integration.rs
src-tauri/wix/: main.wxs
src/assets/fonts/: pretendard.css
src/components/: ErrorBoundary.tsx
src/components/help/: HelpModal.tsx
src/components/layout/: AppModals.tsx  AutoIndexPrompt.tsx  FloatingErrorBanner.tsx  FloatingUI.tsx  Header.tsx  StatusBar.tsx  index.ts
src/components/onboarding/: DisclaimerModal.tsx  OnboardingModal.tsx  OnboardingTour.tsx  index.ts  tourSteps.tsx
src/components/search/: AiAnswerPanel.tsx  AiDisclaimerModal.tsx  CompactSearchBar.tsx  FilenameCopiesBadge.tsx  GroupedSearchResultItem.tsx  HighlightedText.tsx  IndexingReportModal.tsx  LineageBadge.tsx  PreviewPanel.tsx  ResultContextMenu.tsx  SearchBar.tsx  SearchFilters.tsx  SearchModeDropdown.tsx  SearchParadigmToggle.tsx  SearchResultItem.tsx  SearchResultList.tsx  SmartQueryInfo.tsx  StatisticsModal.tsx  TypoSuggestion.tsx  VectorIndexingBanner.tsx  VersionDiffModal.tsx  WelcomeHero.tsx  matchType.ts  searchTextUtils.ts
src/components/settings/: ColorPresetPicker.tsx  SettingsModal.tsx  SettingsToggle.tsx
src/components/settings/tabs/: AiTab.tsx  AppearanceTab.tsx  DiagnosticsTab.tsx  GeneralTab.tsx  SearchTab.tsx  SystemTab.tsx  index.ts  types.ts
src/components/sidebar/: BookmarkList.tsx  DriveIndexingPanel.tsx  FolderTree.tsx  RecentSearches.tsx  Sidebar.tsx  SuggestedFolders.tsx
src/components/ui/: Badge.tsx  Button.tsx  ConfidenceBadge.tsx  CustomSelect.tsx  Dropdown.tsx  FilterDropdown.tsx  Input.tsx  Modal.tsx  Spinner.tsx  TagInput.tsx  Toast.tsx  Tooltip.tsx  UpdateBanner.tsx  VectorIndexingFAB.tsx
src/components/updater/: UpdateModal.tsx
src/contexts/: IndexContext.tsx  SearchContext.tsx  UIContext.tsx  index.ts
src/hooks/: index.ts  useAiAnswer.ts  useAiSearch.ts  useAppEvents.ts  useAppSettings.ts  useCollapsibleSearch.ts  useDocumentCategories.ts  useExport.ts  useFileActions.ts  useFileTags.ts  useFilterPresets.ts  useFirstRun.ts  useIndexStatus.ts  useKeyboardShortcuts.ts  useLocalStorage.ts  useSearch.ts  useSearchInput.ts  useTheme.ts  useToast.ts  useTypoCorrection.ts  useUpdater.ts  useVectorIndexing.ts  useWindowFocus.ts
src/styles/: animations.css  components.css  utilities.css  variables.css
src/types/: api.ts  css.ts  error.ts  index.ts  search.ts  settings.ts
src/utils/: formatRelativeTime.ts  invokeWithTimeout.ts  parseSmartPreview.ts  platform.ts  searchTextUtils.ts
