[package]
name = "docufinder"
version = "0.1.0"
description = "로컬 문서 검색 앱 - HWPX, Office, PDF 지원"
authors = ["Chris"]
edition = "2021"

[lib]
name = "docufinder_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "^2.5", features = [] }

[dependencies]
# Tauri 프레임워크 (^2.10: tauri 2.10.2+)
tauri = { version = "^2.10", features = ["devtools", "tray-icon"] }
tauri-plugin-shell = "^2.3"
tauri-plugin-dialog = "^2.6"
tauri-plugin-fs = "^2.4"
# tauri-plugin-updater = "2"  # 사내 배포용: 비활성화
tauri-plugin-process = "^2.3"
tauri-plugin-autostart = "^2.5"
tauri-plugin-window-state = "^2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# File parsing
zip = "2"
quick-xml = "0.37"
calamine = "0.26"  # Excel
pdf-extract = "0.7"  # PDF

# Async
tokio = { version = "1", features = ["full"] }

# File watching
notify = "8"
walkdir = "2"

# Semantic search (Phase 3) - 버전 고정
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "download-binaries", "tls-native"] }
# NOTE: ort 2.0.1 정식 버전 출시 시 업그레이드 권장 (현재 RC가 최신)
usearch = "2.23"
tokenizers = { version = "0.19", default-features = false, features = ["onig"] }
ndarray = "0.16"

# Korean morphological analysis (Phase 5)
lindera = { version = "2.0", features = ["embed-ko-dic", "compress"] }

# Async traits
async-trait = "0.1"

# HTTP client for model download
ureq = "3"

# SHA-256 무결성 검증
sha2 = "0.10"

# Utilities
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
once_cell = "1"
chrono = "0.4"
dirs = "5"  # 크래시 로그 저장 경로

# Parallel processing
rayon = "1.10"
crossbeam-channel = "0.5"

# Windows APIs
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation"
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
