[package]
name = "docufinder"
version = "2.0.0"
description = "로컬 문서 검색 앱 - HWPX, Office, PDF 지원"
authors = ["Chris"]
edition = "2021"

[lib]
name = "docufinder_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "^2.5", features = [] }

[dependencies]
# Tauri 프레임워크 (^2.10: tauri 2.10.2+)
tauri = { version = "^2.10", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "^2.6"
# tauri-plugin-fs = "^2.4"  # 프론트엔드에서 미사용 (capabilities 미부여)
tauri-plugin-updater = "2"
tauri-plugin-process = "^2.3"
tauri-plugin-autostart = "^2.5"
tauri-plugin-single-instance = "^2"
tauri-plugin-window-state = "^2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# File parsing
zip = "2"
quick-xml = "0.37"
calamine = "0.26"  # Excel
pdf-extract = "0.7"  # PDF

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs", "process"] }

# File watching
notify = "8"
walkdir = "2"

# Semantic search (Phase 3) - 버전 고정
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "download-binaries", "tls-native"] }
# NOTE: ort 2.0.1 정식 버전 출시 시 업그레이드 권장 (현재 RC가 최신)
usearch = "2.23"
tokenizers = { version = "0.19", default-features = false, features = ["onig"] }
ndarray = "0.16"

# Korean morphological analysis (Phase 5)
lindera = { version = "2.0", features = ["embed-ko-dic", "compress"] }

# Async traits
async-trait = "0.1"

# HTTP client for model download
ureq = "3"

# SHA-256 무결성 검증
sha2 = "0.10"

# Base64 (PowerShell EncodedCommand)
base64 = "0.22"

# Utilities
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
once_cell = "1"
chrono = "0.4"
dirs = "5"  # 크래시 로그 저장 경로

# Parallel processing
rayon = "1.10"
crossbeam-channel = "0.5"

# Windows APIs
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation"
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[profile.release]
panic = "unwind"        # catch_unwind 활성화 (PDF/XLSX 파서 안정성 필수)
codegen-units = 4       # 병렬 코드젠 (메모리 사용 분산)
lto = "thin"            # Thin LTO (Full 대비 메모리 절반, 성능 차이 미미)
opt-level = 3
strip = "debuginfo"     # 백트레이스 함수명 유지, 디버그 심볼만 제거
