[package]
name = "docufinder"
version = "2.5.13"
description = "로컬 문서 검색 앱 - HWPX, Office, PDF 지원"
authors = ["Chris"]
edition = "2021"

[lib]
name = "docufinder_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "^2.5", features = [] }

[dependencies]
# Tauri 프레임워크 (^2.10: tauri 2.10.2+)
tauri = { version = "^2.10", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "^2.6"
# tauri-plugin-fs = "^2.4"  # 프론트엔드에서 미사용 (capabilities 미부여)
tauri-plugin-autostart = "^2.5"
tauri-plugin-single-instance = "^2"
tauri-plugin-window-state = "^2.4"
# 자동 업데이트 (GitHub Releases + ed25519)
tauri-plugin-updater = "^2.9"
# relaunch() — 업데이트 설치 후 재시작
tauri-plugin-process = "^2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# File parsing
zip = "8"
quick-xml = "0.37"
calamine = "0.26"  # Excel
pdf-extract = "0.7"  # PDF
lopdf = "0.34"  # PDF 임베디드 이미지 추출 (스캔 PDF OCR용, pdf-extract와 버전 일치)
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp", "tiff"] }
flate2 = "1"  # PDF 이미지 스트림 디코딩 (FlateDecode)

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs", "process"] }

# File watching
notify = "8"
walkdir = "2"
# Windows UNC/extended-length 경로(\\?\, \\?\UNC\) 정규화
dunce = "1"
# .gitignore 파싱 (ripgrep에서 사용하는 공식 구현체)
ignore = "0.4"

# Semantic search (Phase 3) - 버전 고정
# load-dynamic: 런타임에 ORT_DYLIB_PATH로 onnxruntime.dll 로드 (lib.rs setup에서 설정).
# download-binaries는 빌드 시 DLL을 또 받아 재현성을 훼손하므로 사용하지 않는다.
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "load-dynamic", "tls-native"] }
# NOTE: ort 2.0.1 정식 버전 출시 시 업그레이드 권장 (현재 RC가 최신)
usearch = "2.23"
tokenizers = { version = "0.19", default-features = false, features = ["onig"] }
ndarray = "0.16"

# Korean morphological analysis (Phase 5)
lindera = { version = "2.0", features = ["embed-ko-dic", "compress"] }

# Async traits
async-trait = "0.1"

# HTTP client for model download + LLM API
ureq = { version = "3", features = ["json"] }

# SHA-256 무결성 검증
sha2 = "0.10"

# Base64 (PowerShell EncodedCommand)
base64 = "0.22"

# Text encoding detection (EUC-KR, CP949 etc.)
encoding_rs = "0.8"

# Regex (파일명 정규화 — lineage 추론)
regex = "1"

# Utilities
which = "7"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
once_cell = "1"
chrono = "0.4"
dirs = "5"  # 크래시 로그 저장 경로

# Parallel processing
rayon = "1.10"
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3"

# Windows APIs
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation"
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[profile.release]
panic = "unwind"        # catch_unwind 활성화 (PDF/XLSX 파서 안정성 필수)
codegen-units = 4       # 병렬 코드젠 (메모리 사용 분산)
lto = "thin"            # Thin LTO (Full 대비 메모리 절반, 성능 차이 미미)
opt-level = 3
strip = "debuginfo"     # 백트레이스 함수명 유지, 디버그 심볼만 제거
